# codebuff-rust-browser

./: .gitignore  BROWSER_ENGINE_PLAN.md  Cargo.toml  build-appimage.sh
assets/: rust-browser.desktop
crates/arena/src/: lib.rs
crates/common/src/: lib.rs
crates/cookie/: Cargo.toml
crates/cookie/src/: lib.rs
crates/crypto/src/: aes.rs  constant_time.rs  gcm.rs  hkdf.rs  hmac.rs  lib.rs  sha256.rs
crates/css/: Cargo.toml
crates/css/src/: lib.rs  parser.rs  selector.rs  token.rs  value.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/dom/: Cargo.toml
crates/dom/src/: event.rs  lib.rs  node.rs  tree.rs
crates/encoding/src/: lib.rs
crates/font/: Cargo.toml
crates/font/src/: atlas.rs  glyph.rs  lib.rs  rasterizer.rs  tables.rs
crates/gfx_vulkan/: Cargo.toml
crates/gfx_vulkan/src/: lib.rs
crates/html/: Cargo.toml
crates/html/src/: lib.rs  token.rs  tokenizer.rs  tree_builder.rs
crates/http1/: Cargo.toml
crates/http1/src/: lib.rs
crates/http2/: Cargo.toml
crates/image_decode/: Cargo.toml
crates/js_ast/: Cargo.toml
crates/js_builtins/: Cargo.toml
crates/js_bytecode/: Cargo.toml
crates/js_dom_bindings/: Cargo.toml
crates/js_gc/: Cargo.toml
crates/js_lexer/: Cargo.toml
crates/js_parser/: Cargo.toml
crates/js_vm/: Cargo.toml
crates/layout/: Cargo.toml
crates/net/: Cargo.toml
crates/page/: Cargo.toml
crates/paint/: Cargo.toml
crates/platform_linux/: Cargo.toml
crates/style/: Cargo.toml
crates/tls/: Cargo.toml
docs/: GUI_BROWSER_SPEC.md
src/: browser.rs  chrome.rs  hittest.rs  input.rs  main.rs
(+52 files in other folders)
